Fixed sizing/spacing of textarea after rebase

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/checking/text-and-audio/text-and-audio.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/checking/text-and-audio/text-and-audio.component.scss
@@ -13,7 +13,6 @@
     flex-direction: column;
     justify-content: center;
     row-gap: 4px;
-    padding-block: 4px;
     min-width: 68px;
     max-height: 100px;
   }
